src/objects/HyperBatchOutput__c.object
<CustomObject>
    <fields>
        <fullName>AsyncApexJobId__c</fullName>
        <externalId>true</externalId>
        <label>AsyncApexJobId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchState10__c</fullName>
        <label>BatchState10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchState11__c</fullName>
        <label>BatchState11</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchState12__c</fullName>
        <label>BatchState12</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>HyperBatchOutput</label>
    <nameField>
        <displayFormat>HBO-{00000000}</displayFormat>
        <label>HyperBatchOutput Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HyperBatchOutputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>